# Rust-Embroidery-Catalogue

./: .clinerules  .env  .gitignore  Cargo.toml  DISCLAIMER.html  LICENCE  PRIVACY.html  PRIVACY.md  README.md  SECURITY.html  SECURITY.md  State Synchronization Architecture.md  THIRD_PARTY_NOTICES.md  build.rs  create_icon.ps1  package-lock.json  package.json  pyproject.toml  requirements.txt  rust.csv  start-rust-app-no-build.bat  start-rust-app.bat  start-rust-debug-exe.bat  start.bat  tailwind.config.js  tauri.conf.json  third_party_notices.html
.agent/.rules/: agent-rules.md
alembic/: env.py
docs/: AI_TAGGING.md  BACKUP_RESTORE.md  CODE_SIGNING.md  COMMERCIAL.md  GETTING_STARTED.md  MAC_DEPLOYMENT.md  SUPPORTED_FORMATS.md  TROUBLESHOOTING.md  USB_DEPLOYMENT.md  feature-inventory.md
frontend/: eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
migrations/: 20260503000000_initial.down.sql  20260503000000_initial.up.sql  20260526000001_admin_case_insensitive_uniques.up.sql  20260630000002_indexes.down.sql  20260630000002_indexes.up.sql  20260723000003_content_fingerprinting.down.sql  20260723000003_content_fingerprinting.up.sql
plans/: 2d-to-3d-image-upgrade-plan.md  Content fingerprinting migration and back-fill plan.md  backfill-performance-optimization-v2.md  backfill-performance-optimization.md  reduce-ai-tagging.md  refactor-eliminate-duplicate-preview-stitching-colour.md
py_source/: PngWriter.py
src/: config.py  config.rs  database.py  disclaimer.rs  dst_reader.rs  jef_reader.rs  main.py  main.rs  models.py  models.rs  models_db.rs  pes_reader.rs  png_writer.rs  schema.rs  settings.rs  templating.py  templating.rs  utils.rs
src-tauri/: tauri.conf.json
src/models/: mod.rs
static/: .gitkeep
templates/: about.html  about_document.html  base.html  disclaimer.html
tests/: backfill-import-tests.md  conftest.py  test_bulk_import_extra.py  test_database.py  test_desktop_launcher.py  test_folder_picker_and_tagging.py  test_gemini_client.py  test_legacy_tagging_actions.py  test_portable_launcher.py  test_portable_scripts.py  test_regression_e2e.py  test_root_scripts.py  test_routes.py  test_services.py  test_stitch_identifier.py  test_unified_backfill.py  word backfill-import-tests.md.docx
(+400 files in other folders)
