[package]
name = "Rust-Embroidery-Catalogue"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24"      # Replaces pngwriter.py (much faster)
binrw = "0.11"      # Replaces struct.unpack for reading embroidery files
serde = { version = "1.0", features = ["derive"] } # Helps with saving/loading data