[package]
name = "Rust-Embroidery-Catalogue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embroidery-catalogue"
path = "src/main.rs"

[dependencies]
image = "0.24"
binrw = "0.11"
serde = { version = "1.0", features = ["derive"] }
imageproc = "0.23"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
base64 = "0.22"
rfd = "0.14"

[build-dependencies]
tauri-build = { version = "2", features = [] }
