[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embroidery-catalogue"
version = "0.1.0"
description = "A local web application for cataloguing machine embroidery design files"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Julie Stenning" },
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pyembroidery @ git+https://github.com/JulieStenning/pyembroidery.git",
    "pillow>=10.0.0",
    "compoundfiles>=0.3",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "pre-commit>=3.7.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
